# hvn-profiler

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/profiler-cli/: Cargo.toml
crates/profiler-cli/src/: main.rs
crates/profiler-render/: Cargo.toml
crates/profiler-render/src/: editor.rs  faults.rs  gen_panel.rs  generators.rs  lib.rs  panels.rs  view3d.rs
crates/profiler-render/tests/: animation_test.rs  cell_editor_test.rs  compact_cells_test.rs  context_menu_test.rs  deadreckon_test.rs  drag_reorder_test.rs  dropdown_collapse_test.rs  editor_relocate_test.rs  ekf_flags_test.rs  fault_panel_test.rs  format_spec_test.rs  gen_panel_test.rs  generator_test.rs  info_text_test.rs  known_keys_test.rs  label_mode_test.rs  label_overlay_test.rs  layout_test.rs  per_cell_routing_test.rs  per_drone_store_test.rs  responsive_layout_test.rs  source_key_grouping_test.rs  source_selector_test.rs  status_e2e_test.rs  status_editor_form_test.rs  status_primitive_test.rs  template_fallback_test.rs  trail_decode_test.rs  undo_redo_test.rs  view_drone_persist_test.rs  zoom_lock_test.rs
crates/profiler-source/: Cargo.toml
crates/profiler-source/src/: discovery.rs  fault_publisher.rs  lib.rs  mavlink_source.rs  zmq_source.rs
crates/profiler-source/tests/: discovery_test.rs  drone_discovery_test.rs  drone_name_arc_test.rs  fault_publisher_test.rs  mavlink_active_gcs_test.rs  mavlink_ahrs2_test.rs  mavlink_ap_gps_keys_test.rs  mavlink_ap_mag_xyz_test.rs  mavlink_battery_status_test.rs  mavlink_discovery_bind_0000_test.rs  mavlink_ekf_status_test.rs  mavlink_full_vocabulary_test.rs  mavlink_gcs_filter_test.rs  mavlink_heartbeat_decode_test.rs  mavlink_heartbeat_test.rs  mavlink_mag_xyz_test.rs  mavlink_nav_controller_output_test.rs  mavlink_scaled_imu2_test.rs  mavlink_statustext_test.rs  mavlink_sysid_demux_test.rs  mavlink_sysid_map_test.rs  mavlink_sysid_test.rs  mavlink_vibration_test.rs  multi_source_merge_test.rs  multi_source_test.rs  picker_identity_test.rs  routing_audit_test.rs  runtime_source_add_test.rs  sample_value_types_test.rs
crates/profiler-template/: Cargo.toml
crates/profiler-template/src/: bundled.rs  discovery.rs  lib.rs
crates/profiler-template/tests/: cell_source_drone_test.rs  new_template_test.rs  template_picker_test.rs  template_save_test.rs
crates/profiler-template/tests/fixtures/: hvn-default.json  real-drone.json
installer/: hvn-profiler.iss
templates/: .gitkeep  hvn-default.json  mag-debug.json  real-drone.json  tutorial.json
