[workspace]
resolver = "2"
members = [
    "crates/profiler-cli",
    "crates/profiler-render",
    "crates/profiler-source",
    "crates/profiler-template",
]

[workspace.package]
version = "0.10.2"
edition = "2021"
license = "MIT"
authors = ["HVN Labs <engineering@hvn-labs.com>"]
repository = "https://github.com/HVN-Labs/hvn-profiler"
rust-version = "1.92"

[workspace.dependencies]
# GUI / rendering
eframe = { version = "0.34", default-features = true }
egui = "0.34"
egui_plot = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# CLI / errors / logging
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

# Telemetry sources
mavlink = "0.18"
# Pure-Rust ZMQ — no libzmq C dep. Async-only, drives a tokio runtime in
# `profiler-source` and bridges to the sync render loop via crossbeam-channel.
zeromq = { version = "0.6", default-features = false, features = ["tokio-runtime", "all-transport"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
crossbeam-channel = "0.5"
rmpv = { version = "1", features = ["with-serde"] }

# v0.8.0: platform dirs for user-template discovery + native file dialog.
# Both pure-Rust, cross-platform (Windows / Linux / macOS).
dirs = "5"
# `rfd` brings a native blocking file picker. On Linux the default backend
# is GTK; we override to the XDG desktop portal so no system GTK dev libs are
# needed at compile time (`xdg-portal` is pure-Rust + DBus). Windows + macOS
# pick up their native dialogs unchanged.
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }

# Workspace-internal
profiler-render   = { path = "crates/profiler-render" }
profiler-source   = { path = "crates/profiler-source" }
profiler-template = { path = "crates/profiler-template" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
