[package]
name = "profiler-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HVN profiler — CLI entry point that opens the egui window."

[[bin]]
name = "hvn-profiler"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

profiler-render   = { workspace = true }
# `mavlink-source` is enabled by default here so the shipped `hvn-profiler`
# binary supports `--source mavlink://…` out of the box (the point of v0.4.0:
# direct real-drone telemetry). Enabling it adds the `mavlink` crate's dialect
# codegen build step (~one-time ~25 s on a cold build); steady-state rebuilds
# are unaffected. See profiler-source's `mavlink-source` feature.
profiler-source   = { workspace = true, features = ["mavlink-source"] }
profiler-template = { workspace = true }
