[package]
name = "profiler-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "egui_plot wrappers + GPU-friendly trace storage for hvn-profiler."

[dependencies]
egui = { workspace = true }
egui_plot = { workspace = true }
profiler-template = { workspace = true }
log = { workspace = true }
