[package]
name = "profiler-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "egui_plot wrappers + GPU-friendly trace storage for hvn-profiler."

[dependencies]
egui = { workspace = true }
egui_plot = { workspace = true }
profiler-template = { workspace = true }
log = { workspace = true }

[dev-dependencies]
# Used by the v0.5.0 trail-decode integration test to round-trip a msgpack
# envelope through the source flattener into the trace store.
profiler-source = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
